# kelder_api

./: .gitignore  Dockerfile  LICENCE.md  README.md  docker-compose.yml
kelder_api/: .env  .gitignore  Dockerfile  Dockerfile.host_api  Makefile  README.md  docker-compose.yml  polygons.geojson  pyproject.toml  restart_compose.sh  start_app.sh  stop_app.sh
kelder_api/scripts/: restart_compose.sh  start_app.sh  stop_app.sh
kelder_api/src/kelder_api/app/: background_orchestrator.py  getters.py  graph_ingestion_flow.py  host_api.py  main.py  worker_orchestrator.py
kelder_api/src/kelder_api/assets/: marks.json  seamarks_and_coastlines_solent.geojson  seas.json
kelder_api/src/kelder_api/components/agentic_workflow/: chat_storage.py  graph.py  models.py  nodes.py  utils.py
kelder_api/src/kelder_api/components/auth/: clerk.py
kelder_api/src/kelder_api/components/background ochestrator/: enums.py  (+3 more)
kelder_api/src/kelder_api/configuration/: logging_config.py  settings.py
kelder_api/tests/: conftest.py  nmea_dummy_data.txt
kelder_api/tests/app/: test_app_routes.py
kelder_api/tests/components/agentic_workflow/: conftest.py  test_graph.py
kelder_api/tests/components/background_orchestrator/: test_orchestrator.py
kelder_api/tests/components/db_manager/: test_db_manager.py
kelder_api/tests/components/gps/: test_gps_interface.py
kelder_api/tests/components/graph_ingestion/: test_feature_processing.py  test_service.py
kelder_api/tests/components/log/: test_log_models.py  test_log_service.py  test_models.py
kelder_api/tests/components/redis_client/: test_redis_client.py
kelder_api/tests/components/velocity/: test_velocity_service.py  test_velocity_utils.py
kelder_api/tests/notebooks/: agent.ipynb  background_orchestrator.ipynb  cellular_modem.ipynb  chatbot.ipynb  compass_sensor.ipynb  drift_calculator.ipynb  gps_interface.ipynb  graph_db.ipynb  journey_history.ipynb  log.ipynb  passage_plan_agent.ipynb  redis_client.ipynb  sea_map_processing.ipynb  settings.ipynb  tide_tools.ipynb  ultrasound.ipynb  velocity_calculation.ipynb
kelder_api/tests/notebooks/graph_ingestion/: coastline_processing.ipynb  graph_injestion_poc.ipynb  neo4j_client.py  queries.py  utils.py
(+90 files in other folders)
