[project]
name = "kelder-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pynmea2 (>=1.19.0,<2.0.0)",
    "pyserial-asyncio (>=0.6,<0.7)",
    "asyncio (>=3.4.3,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "gpiozero (>=2.0.1,<3.0.0)",
]

[tool.poetry]
packages = [{include = "kelder_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
