[project]
name = "kelder-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pynmea2 (>=1.19.0,<2.0.0)",
    "pyserial-asyncio (>=0.6,<0.7)",
    "asyncio (>=3.4.3,<4.0.0)",
    "ipykernel>=6.29.5,<7.0.0",
    "gpiozero (>=2.0.1,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "adafruit-circuitpython-lsm303-accel (>=1.1.23,<2.0.0)",
    "sudo (>=1.0.0,<2.0.0)",
    "adafruit-circuitpython-lis2mdl (>=2.1.25,<3.0.0)",
    # "lgpio (>=0.2.2.0,<0.3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "ruff (>=0.11.9,<0.12.0)",
    "minimalmodbus (>=2.1.1,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "adafruit-blinka (>=8.58.1,<9.0.0)",
    #"rpi-gpio (>=0.7.1,<0.8.0)",
    "openai (>=1.106.1,<2.0.0)",
    "openai-agents (==0.0.15)"
]

[tool.poetry]
packages = [{include = "kelder_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]

[tool.ruff.lint]
ignore = []
select = ["E", "F", "I", "W291", "W292", "W293"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
